@@ -6,7 +6,7 @@ Advantages over the original:
 - Suitable for less powerful devices
 - Battery-efficient parallax effect
 - Automatic dark mode based on the current theme of your device
-- Various customization options
+- Various customization and color options
 
 How to set as background:
 - Tap SET in the top right corner, it should appear a preview
