@@ -1,34 +1,20 @@
-<!--
-  ~ This file is part of Doodle Android.
-  ~ Doodle Android is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~ Doodle Android is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-  ~ GNU General Public License for more details.
-  ~ You should have received a copy of the GNU General Public License
-  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
-  ~ Copyright (c) 2021 by Patrick Zedler
-  -->
-
-<vector
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:width="108dp"
-  android:height="108dp"
-  android:viewportWidth="108"
-  android:viewportHeight="108">
-  <group
-    android:scaleX="2.475"
-    android:scaleY="2.475"
-    android:translateX="24.3"
-    android:translateY="24.3">
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="108dp"
+    android:height="108dp"
+    android:viewportWidth="108"
+    android:viewportHeight="108">
+  <group android:scaleX="2.475"
+      android:scaleY="2.475"
+      android:translateX="24.3"
+      android:translateY="24.3">
     <path
-      android:pathData="M7.54,5.5a4,4 0,0 0,-1.42 0.37,3.61 3.61,0 0,0 -1.92,2c-0.32,0.85 -0.25,1.83 0.18,2.77l3.53,7.6c0.21,0.45 0.6,0.75 1.03,0.9 0.43,0.15 0.91,0.17 1.36,-0.03l3.8,-1.77 1.26,2.71a0.6,0.6 0,0 0,0.79 0.3,0.6 0.6,0 0,0 0.3,-0.8l-1.27,-2.71 3.8,-1.77c0.45,-0.2 0.74,-0.6 0.9,-1.02 0.15,-0.42 0.18,-0.91 -0.03,-1.36l-1.51,-3.26a0.6,0.6 0,0 0,-0.8 -0.29,0.6 0.6,0 0,0 -0.29,0.8l1.51,3.25c0.05,0.1 0.06,0.28 0,0.45a0.65,0.65 0,0 1,-0.29 0.35l-3.8,1.76 -3.78,-8.14a3.61,3.61 0,0 0,-2 -1.93,3.29 3.29,0 0,0 -1.35,-0.18zM8.48,6.8c0.54,0.2 1,0.62 1.33,1.32l3.78,8.14 -3.8,1.76a0.65,0.65 0,0 1,-0.44 0,0.63 0.63,0 0,1 -0.35,-0.29l-3.53,-7.6a2.38,2.38 0,0 1,-0.15 -1.85c0.2,-0.54 0.62,-1 1.3,-1.32 0.7,-0.33 1.33,-0.35 1.86,-0.15z"
-      android:fillColor="#000" />
+        android:pathData="M15.61,5.1a1.99,1.99 0,0 0,-0.96 2.64,1.99 1.99,0 0,0 2.64,0.97 1.99,1.99 0,0 0,0.96 -2.65,1.99 1.99,0 0,0 -2.64,-0.96zM16.21,6.46a0.5,0.5 0,0 1,0.03 0,0.5 0.5,0 0,1 0.66,0.23 0.5,0.5 0,0 1,-0.24 0.67,0.5 0.5,0 0,1 -0.67,-0.25 0.5,0.5 0,0 1,0.21 -0.65z"
+        android:fillColor="#bab277"/>
     <path
-      android:pathData="M15.55,5.03a1.99,1.99 0,0 0,-0.96 2.64,1.99 1.99,0 0,0 2.64,0.97 1.99,1.99 0,0 0,0.96 -2.65,1.99 1.99,0 0,0 -2.64,-0.96zM16.15,6.39a0.5,0.5 0,0 1,0.03 -0.01,0.5 0.5,0 0,1 0.66,0.24 0.5,0.5 0,0 1,-0.24 0.67,0.5 0.5,0 0,1 -0.67,-0.25 0.5,0.5 0,0 1,0.21 -0.65z"
-      android:fillColor="#bab277" />
+        android:pathData="M15.95,20.11L10.33,8.03c-0.76,-1.65 -2.37,-2.24 -4.02,-1.47 -1.65,0.76 -2.24,2.37 -1.47,4.02l3.57,7.7a1.3,1.3 0,0 0,1.61 0.58l8.8,-4.09a1.3,1.3 0,0 0,0.58 -1.6l-1.53,-3.3"
+        android:strokeWidth="1.2"
+        android:fillColor="#00000000"
+        android:strokeColor="#000"
+        android:strokeLineCap="round"/>
   </group>
 </vector>
