@@ -97,7 +97,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
-        android:clickable="true"
         app:contentPadding="16dp"
         app:rippleColor="@color/highlight_secondary"
         app:cardElevation="0dp"
